Jdk 13 Queries With Text Blocks
We have to enable the preview jdk 13 features (--enable-preview)